--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # REQUIRED MODULES
-# run "py -m pip install ." in this directory to quickly install them
+# run "python -m pip install -r ./requirements.txt" in this directory to quickly install them
 # we will presumably add to this list as needed
 
 simpleaudio
