--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@
 simpleaudio # for playing WAV files
 ffmpeg-python # for playing other audio files on windows (potentially)
 pydub # for playing other audio files on windows (potentially)
+mysql # for database stuff
